[package]
name = "pwintln"
version = "0.1.0"
authors = ["lf- <lf-@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.80"
goblin = "0.2.3"
cstr = "0.2.5"
backtrace = "0.3.55"
owoify = "0.1.5"

[dev-dependencies]
doc-comment = "0.3.3"
