[package]
name = "pwintln"
version = "0.1.3"
authors = ["jade <software@lfcode.ca>"]
edition = "2018"
license = "BSD-2-Clause"
description = "println? OwO"
documentation = "https://docs.rs/pwintln"
repository = "https://github.com/lf-/pwintln"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.80"
goblin = "0.2.3"
cstr = "0.2.5"
backtrace = "0.3.55"
owoify = "0.1.5"

[dev-dependencies]
doc-comment = "0.3.3"

[profile.release]
debug = true
